[tool.poetry]
name = "rybak"
version = "0.1.0"
description = "Project generator"
authors = ["Raphael Krupinski <10319569-mattesilver@users.noreply.gitlab.com>"]
readme = "README.md"
packages = [{ include = "rybak", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
mako = { version = "^1.2.4", optional = true }
tornado = { version = "^6.3.3", optional = true }
jinja2 = { version = "^3.1.2", optional = true }

[tool.poetry.extras]
mako = ['mako']
jinja = ['jinja2']
tornado = ['tornado']

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
pythonpath = [
    ".",
    "tests",
]