[tool.poetry]
name = "rybak"
version = "0.4.0"
description = "Directory-tree generator library"
authors = ["Raphael Krupinski <10319569-mattesilver@users.noreply.gitlab.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{ include = "rybak", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
importlib-resources = { version = "^5", python = "<3.12" }
jinja2 = { version = "^3", optional = true }
mako = { version = "^1", optional = true }
typing-extensions = {version = "^4.9", python = "<=3.9"}

[tool.poetry.extras]
mako = ['mako']
jinja = ['jinja2']

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
pythonpath = [
    '.',
    'tests',
]
[tool.coverage.report]
exclude_lines = [
    "@abc.abstractmethod",
    "pragma: no cover",
]


[tool.ruff]
line-length = 120
target-version = 'py38'
preview = true

[tool.ruff.lint]
extend-select = [
    'A', 'ANN0', 'B', 'BLE', 'C4', 'C90', 'COM818', 'E','FURB', 'I', 'N', 'PERF', 'PIE', 'PYI', 'RUF', 'S',
    'T10', 'T20', 'UP', 'W'
]
extend-ignore = [
    'S101', 'S701',
    'C408'
]

[tool.ruff.format]
quote-style = 'single'


[tool.mypy]
mypy_path = "src"
namespace_packages = true
python_version = "3.8"
[[tool.mypy.overrides]]
module = [
    "mako",
    "mako.lookup",
    "mako.template",
]
ignore_missing_imports = true
